cleaning out house baby

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -12,8 +12,8 @@ $enable-responsive-font-sizes: true;
 @import "rails_bootstrap_forms";
 
 @font-face {
-  font-family: 'TwinMarker';
-  src: font-url('TwinMarker.ttf') format('truetype');
+  font-family: 'Ubuntu';
+  src: font-url('Ubuntu-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -104,7 +104,7 @@ h1 {
   margin-bottom: 3vh;
   padding-top: 2vh;
   color: $darkgrey;
-  font-family: 'TwinMarker';
+  font-family: 'Ubuntu';
   //border-bottom: 2px solid $lightgrey;
   @include respond-to(handhelds) {
     font-size: 2em;
@@ -168,7 +168,7 @@ form {
   }
 
   .form-standard-title {
-    font-family: 'TwinMarker';
+    font-family: 'Ubuntu';
     font-size: 2.8rem;
 
     @include respond-to(handhelds) {
@@ -203,7 +203,7 @@ form {
     background-color: $darkgreen;
     width: 40vw;
     margin: auto;
-    font-family: 'TwinMarker';
+    font-family: 'Ubuntu';
     color: white;
     margin-bottom: 2vh;
 
