--- a/app/assets/stylesheets/generic-form.scss
+++ b/app/assets/stylesheets/generic-form.scss
@@ -63,7 +63,7 @@
       margin: auto;
       background-color: $darkgreen;
       color: white;
-      font-family: 'TwinMarker';
+      font-family: 'Ubuntu';
       font-size: 3rem;
       padding-top: 1vh;
       padding-bottom: 1vh;
