--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -51,7 +51,7 @@
 
 
 .navbar-title {
-  font-family: 'TwinMarker';
+  font-family: 'Ubuntu';
   font-size: 4rem;
   color: $darkgreen;
   @include respond-to(handhelds) {
