--- a/app/assets/stylesheets/waivers.scss
+++ b/app/assets/stylesheets/waivers.scss
@@ -8,7 +8,7 @@
 .new-waiver-upload-page {
 
   .new-waiver-upload-title {
-    font-family: 'TwinMarker';
+    font-family: 'Ubuntu';
     font-size: 2.5rem;
     color: $darkgreen;
     text-align: center;
