--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       <%= render 'layouts/navbar' %>
     <% end %>
     <main class='wrapper'>
+      <div class='bg-image'></div>
       <%= render 'layouts/alerts' %>
       <%= yield %>
     </main>
