--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
       <%= f.text_field :username, placeholder: 'Username' %>
       <%= f.email_field :email, placeholder: 'Email Address', class: 'form-standard-emailfield' %>
       <%= f.text_field :first_name, placeholder: 'First Name', class: 'form-standard-textfield' %>
-      <%= f.text_field :city, placeholder: 'City', class: 'form-standard-textfield' %>
+      <%= f.text_field :postal_code, placeholder: 'Postal/Zip Code', class: 'form-standard-textfield' %>
       <div class="form-group">
         <div class="country-buffer"></div>
         <%= f.country_select :country, selected: 'US', class: 'form-standard-countryselect' %>
