--- a/app/views/opportunities/new.html.erb
+++ b/app/views/opportunities/new.html.erb
@@ -1,3 +1,3 @@
 <div class="new-cleanup-page">
-  <%= render 'creationform', opportunity: @opportunity %>
+  <%= render 'creationform', opportunity: @opportunity, coords: @coord_string %>
 </div>
