cleanup object and creation is good, map show bug is fixed

--- a/app/views/cleanups/_creationform.html.erb
+++ b/app/views/cleanups/_creationform.html.erb
@@ -5,6 +5,7 @@
   <%= f.number_field :buckets %>
   <%= f.number_field :medium_bags %>
   <%= f.number_field :large_bags %>
+  <%= f.number_field :participants %>
   <%= f.hidden_field :coordinates, :value => coords %>
   <div class="create-cleanup-btn-wrapper">
     <%= f.submit "Let's clean up some trash!", class: "create-cleanup-btn" %>
