detrashers 2.0 is fucking ready

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <div class="location-select-div">
     <div class="location-select-outline">
       <div class="location-select-title">
-        Enter your zip code to get started!
+        Enter your postcode to begin
       </div>
       <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/map" method="get">
         <input class="form-control location-select-field" type="search" id="postcode" aria-label="Change Location" name="location_term">
