--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -611,25 +611,137 @@
 .home-page {
   height: 90vh;
   background-color: white;
-
+  font-family: 'Ubuntu';
 
 
   .cleanup-multiuse-hover-container {
     position: absolute;
-    margin-left: 10vw;
-    margin-top: 10vh;
     z-index: 1000;
   }
 
-
   .create-account-modal {
     position: absolute;
-    margin-left: 10vw;
+    margin-left: 20vw;
     margin-top: 5vh;
+    width: 60vw;
+    height: 15vh;
+    font-size: 2.5rem;
     z-index: 10000;
     display: none;
+
+
+    @include respond-to(handhelds) {
+      margin-left: 6vw;
+      margin-top: 3vh;
+      width: 88vw;
+      font-size: 1.2rem;
+    }
+
+    .small-text {
+
+      font-size:1.7rem;
+
+      @include respond-to(handhelds) {
+        font-size: .8rem;
+      }
+    }
   }
 
+  .enable-edit-mode-btn {
+    position: absolute;
+    margin-left: 30vw;
+    margin-top: 73vh;
+    width: 40vw;
+    height: 10vh;
+    font-family: 'Ubuntu';
+    font-size: 4rem;
+    color: white;
+    background: $darkgreen;
+    opacity: .9;
+
+    @include respond-to(handhelds) {
+      margin-left: 10vw;
+      width: 80vw;
+      height: 10vh;
+      font-size: 2.5rem;
+    }
+  }
+
+  .disable-edit-mode-btn {
+    position: absolute;
+    margin-left: 35vw;
+    margin-top: 80vh;
+    width: 30vw;
+    height: 8vh;
+    font-family: 'Ubuntu';
+    font-size: 4rem;
+    color: white;
+    background: $darkgreen;
+    opacity: .8;
+
+    @include respond-to(handhelds) {
+      margin-left: 10vw;
+      margin-top: 81vh;
+      width: 80vw;
+      height: 6vh;
+      font-size: 2.2rem;
+    }
+  }
+
+  .submit-new-cleanup-btn {
+    position: absolute;
+    display: none;
+    color: white;
+    background-color: $darkgreen;
+    opacity: .9;
+
+    margin-left: 25vw;
+    margin-top: 68vh;
+    width: 50vw;
+    height: 10vh;
+
+    font-size: 4.5rem;
+
+    @include respond-to(handhelds) {
+      margin-left: 2vw;
+      margin-right: 2vw;
+      font-size: 2.4rem;
+      width: 96vw;
+    }
+  }
+
+  .edit-mode-modal {
+    display: none;
+    position: absolute;
+    margin-left: 10vw;
+    margin-top: 10vh;
+    width: 25vw;
+    height: 60vh;
+    z-index: 1000;
+    font-size: 2rem;
+
+    @include respond-to(handhelds) {
+      margin-left: 2vw;
+      margin-top: 2vh;
+      width: 96vw;
+      height: 30vh;
+      font-size: 1.2rem;
+    }
+
+    #hide-edit-mode-modal-btn {
+      background-color: $darkgreen;
+      color: white;
+      opacity: .8;
+    }
+
+    .small-text {
+        font-size: 1.3rem;
+
+        @include respond-to(handhelds) {
+          font-size: .8rem;
+        }
+      }
+  }
 
 
 }
