--- a/app/views/cleanups/_creationform.html.erb
+++ b/app/views/cleanups/_creationform.html.erb
@@ -1,13 +1,12 @@
 <%= bootstrap_form_for(@cleanup) do |f| %>
-  <div class="new-oppo-buffer"></div>
-  <%= f.text_area :description %>
-  <%= f.number_field :small_bags %>
-  <%= f.number_field :buckets %>
-  <%= f.number_field :medium_bags %>
-  <%= f.number_field :large_bags %>
+  <div class="new-cleanup-buffer"></div>
+  <%= f.number_field :small_bags, label: 'Grocery bag count:' %>
+  <%= f.number_field :buckets, label: '5gal bucket count:' %>
+  <%= f.number_field :medium_bags, label: 'Kitchen bag count:' %>
+  <%= f.number_field :large_bags, label: '55gal bag count:' %>
   <%= f.number_field :participants %>
   <%= f.hidden_field :coordinates, :value => coords %>
   <div class="create-cleanup-btn-wrapper">
-    <%= f.submit "Let's clean up some trash!", class: "create-cleanup-btn" %>
+    <%= f.submit "Put it on the map!", class: "create-cleanup-btn" %>
   </div>
 <% end %>
