--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -18,12 +18,12 @@
   <div id="cleanup-multiuse-hover-container" class="cleanup-multiuse-hover-container">
     <button onclick="enableEditMode()" id="enable-edit-mode-btn" class="enable-edit-mode-btn">
       <div class="btn-content">
-        Add your cleanup
+        Add a Cleanup
       </div>
     </button>
-    <button onclick="submitNewCleanup()" id="submit-new-cleanup-btn" class="submit-new-cleanup- btn">
+    <button onclick="submitNewCleanup()" id="submit-new-cleanup-btn" class="submit-new-cleanup-btn">
       <div class="btn-content">
-        Submit
+        Submit Cleanup Area
       </div>
     </button>
     <button onclick="disableEditMode()" id="disable-edit-mode-btn" class="disable-edit-mode-btn">
@@ -36,13 +36,29 @@
     <button id="hide-create-account-modal" onclick="hideCreateAccountModal()">
       <div class="create-account-modal-content">
         If you create an account, you'll be able to track your stats over time!
+        <br>
+        <i>It's free, easy, and we will <b>never</b> sell your information!</i>
+        <br>
+        <span class="small-text">Click this box to dismiss</span>
       </div>
     </button>
   </div>
   <div id="edit-mode-modal" class="edit-mode-modal">
-    <button id="hide-edit-mode-modal" onclick="hideEditModeModal()">
+    <button id="hide-edit-mode-modal-btn" onclick="hideEditModeModal()">
       <div class="hide-edit-mode-modal-content">
-        Click to draw a box around the area that you cleaned up. Click "Cancel" at any time to
+        Click to draw a box around the area that you cleaned up- it doesn't have to be exact!
+        <br>
+        <br>
+        Click the start point to complete your cleanup area.
+        <br>
+        <br>
+        Don't worry if a pin isn't exactly in the right spot- you can drag them once you finish your polygon!
+        <br>
+        <br>
+        <span class="small-text">Click this box to make the helper text go away.</span>
+      </div>
+    </button>
+  </div>
   <div id="map" class="map-div"></div>
 </div>
 
