clean up header and footer

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -57,6 +57,10 @@
   @include respond-to(handhelds) {
     font-size: 1.8rem;
   }
+
+  .navbar-version {
+    font-size:1.6rem;
+  }
 }
 
 .nav-item {
