--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
       <!-- Grid column -->
       <div class="col-md-8 mt-md-0 mt-3">
         <!-- Content -->
-        <h5 class="text-uppercase">Detrashers <small>BETA</small></h5>
+        <h5 class="text-uppercase">Detrashers2.0 <small>BETA</small></h5>
         <p>Detrashers is run by a 501(c)3 non-profit and is donation-funded. We do not collect information for commercial purposes.</p>
       </div>
       <!-- Grid column -->
@@ -15,12 +15,6 @@
       <!-- Grid column -->
       <div class="col-md-3 mb-md-0 mb-3">
         <!-- Links -->
-        <h5 class="text-uppercase">More Info</h5>
-        <ul class="list-unstyled">
-          <li>
-            <a class="footer-link" href="/donate">Donation and Help Info</a>
-          </li>
-        </ul>
       </div>
       <!-- Grid column -->
     </div>
@@ -28,7 +22,7 @@
   </div>
   <!-- Footer Links -->
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© <%= Date.today.strftime('%Y') %> - Detrashers v1.3.0-beta</div>
+  <div class="footer-copyright text-center py-3">© <%= Date.today.strftime('%Y') %> - Detrashers v2.0.0-beta</div>
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
