--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
   <a class="navbar-brand" href="/">
     <%= image_tag("detrashers-logo.png", class: "navbar-logo", id: "home-step1") %>
     <span class="navbar-title">
-      DETRASHERS
+      DETRASHERS<span class="navbar-version">  2.0</span>
     </span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation">
