--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,9 +31,8 @@
         <div class="aboutus-content">
           There are many ways you can help: organizing, participating, donating, and spreading the word!
           <div class="help-out-links">
-            <a class="help-out-link" href="/donate">Donation Info</a>
             <a class="help-out-link" href="https://instagram.com/detrashers">Follow Us</a>
-            <a class="help-out-link" href="mailto:help@detrashers.org">Contact Us</a>
+            <a class="help-out-link" href="mailto:matthew@justbehuman.io">Contact Us</a>
           </div>
         </div>
       </div>
