--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -5,10 +5,10 @@ $break-large: 1028px;
   @if $media == handhelds {
     @media only screen and (max-width: $break-small) { @content; }
   }
-  @else if $media == medium-screens {
+  @else if $media == medium {
     @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) { @content; }
   }
-  @else if $media == wide-screens {
+  @else if $media == wide {
     @media only screen and (min-width: $break-large) { @content; }
   }
 }
