--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -44,8 +44,12 @@
   max-width: 4vw;
   height: auto;
   @include respond-to(handhelds) {
-    max-width: 10vw;
+    max-width: 25vw;
   };
+
+  @include respond-to(medium) {
+    max-width: 25vw;
+  }
 }
 
 
@@ -99,7 +103,7 @@
 .mobile-nav {
   display: none;
 
-  @include respond-to(medium-screens) {
+  @include respond-to(medium) {
     display: block;
   }
 
@@ -117,7 +121,7 @@
   width: 100%;
   height: 100%;
 
-  @include respond-to(medium-screens) {
+  @include respond-to(medium) {
     display: none;
   }
 
