--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -51,7 +51,7 @@
   padding-left: 30vh;
   padding-right: 30vh;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium-screens) {
     padding-top: 2vh;
     padding-left: 2vw;
     padding-right: 2vw;
