--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -2,11 +2,8 @@ $break-small: 420px;
 $break-large: 1028px;
 
 @mixin respond-to($media) {
-  @if $media == handhelds {
-    @media only screen and (max-width: $break-small) { @content; }
-  }
-  @else if $media == medium {
-    @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) { @content; }
+  @if $media == medium {
+    @media only screen and (max-width: $break-large - 1) { @content; }
   }
   @else if $media == wide {
     @media only screen and (min-width: $break-large) { @content; }
