--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -32,7 +32,7 @@
       #opportunity_title {
         font-size: 3rem;
 
-        @include respond-to(handhelds) {
+        @include respond-to(medium) {
           font-size: 1.8rem;
         }
       }
@@ -58,7 +58,7 @@
           font-size: 3rem;
 
 
-          @include respond-to(handhelds) {
+          @include respond-to(medium) {
             font-size: 1.9rem;
           }
         }
@@ -72,7 +72,7 @@
         text-align: center;
         font-size: 3rem;
 
-        @include respond-to(handhelds) {
+        @include respond-to(medium) {
           font-size: 1.9rem;
         }
       }
@@ -83,7 +83,7 @@
         text-align: center;
         font-size: 3rem;
 
-        @include respond-to(handhelds) {
+        @include respond-to(medium) {
           font-size: 1.9rem;
         }
       }
@@ -94,7 +94,7 @@
         text-align: center;
         font-size: 3rem;
 
-        @include respond-to(handhelds) {
+        @include respond-to(medium) {
           font-size: 1.9rem;
         }
       }
@@ -116,7 +116,7 @@
       margin-top: 3vh;
       margin-bottom: 1vh;
 
-      @include respond-to(handhelds) {
+      @include respond-to(medium) {
         font-size: 2rem;
       }
     }
@@ -130,7 +130,7 @@
 .opportunity-show-page {
   background-color: white;
   height: 100%;
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
 
     .opportunity-tab-links {
       padding-top: 0px;
@@ -148,7 +148,7 @@
     text-align: center;
 
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       display: block;
     }
 
@@ -170,7 +170,7 @@
     display: none;
     text-align: center;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       display: block;
     }
 
@@ -193,7 +193,7 @@
     display: grid;
     grid-template-columns: 20% 60% 20%;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       grid-template-columns: 100%;
     }
   }
@@ -215,7 +215,7 @@
 
     text-align: left;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       grid-column: 1;
     }
   }
@@ -251,7 +251,7 @@
       cursor: pointer;
     }
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       display: none;
     }
   }
@@ -296,7 +296,7 @@
       font-weight: 600;
       color: $midgrey;
 
-      @include respond-to(handhelds) {
+      @include respond-to(medium) {
         font-size: 1.2rem;
       }
     }
@@ -304,7 +304,7 @@
   .oppo-posts-container {
     display: none;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       display: block;
       margin-top: 4vh;
       border-top: 1px solid $lightgrey;
@@ -338,7 +338,7 @@
 	grid-template-rows: 2;
 
 
-	@include respond-to(handhelds) {
+	@include respond-to(medium) {
 		grid-template-columns: 100%;
 		grid-template-rows: 4;
 	}
@@ -356,7 +356,7 @@
 		grid-template-rows: 2;
 		grid-template-columns: 1;
 
-		@include respond-to(handhelds) {
+		@include respond-to(medium) {
 			height: auto;
 		}
 
@@ -392,7 +392,7 @@
 		font-weight: 500;
 		border-bottom: 1px solid $lightgrey;
 
-		@include respond-to(handhelds) {
+		@include respond-to(medium) {
 			font-size: 1.3rem;
 		}
 	}
@@ -405,7 +405,7 @@
 		font-size: 1.8rem;
 		font-weight: 600;
 
-		@include respond-to(handhelds) {
+		@include respond-to(medium) {
 			font-size: 1.3rem;
 		}
 	}
@@ -417,7 +417,7 @@
 	grid-column: 2;
   border-bottom: 1px solid $lightgrey;
 
-	@include respond-to(handhelds) {
+	@include respond-to(medium) {
 		grid-row: 2;
 		grid-column: 1;
 	}
@@ -439,7 +439,7 @@
 		padding-top: 2vh;
 
 
-		@include respond-to(handhelds) {
+		@include respond-to(medium) {
 			padding-top: 1vh;
 			font-size: 1.4rem;
 		}
@@ -453,7 +453,7 @@
       border: 1px solid $darkgrey;
       background-color: $limegreen-low;
 
-			@include respond-to(handhelds) {
+			@include respond-to(medium) {
 				font-size: 1.4rem !important;
 			}
 		}
@@ -472,7 +472,7 @@
 	  margin: 0;
 	  font-size: 1.5rem;
 	  padding-left: 1vw;
-	  @include respond-to(handhelds){
+	  @include respond-to(medium){
 	    font-size: 1rem;
 	  };
 	}
@@ -489,7 +489,7 @@
     margin-right: 2vw;
     font-size: 1.1rem;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: .9rem;
     }
   }
@@ -498,7 +498,7 @@
 	grid-row: 2;
 	grid-column: 1;
 
-	@include respond-to(handhelds) {
+	@include respond-to(medium) {
 		grid-row: 3;
 		grid-column: 1;
 	}
@@ -523,7 +523,7 @@
 		padding-right: 2vw;
 		padding-top: 2vh;
 
-		@include respond-to(handhelds) {
+		@include respond-to(medium) {
 			padding-top: 1vh;
 			font-size: 1.4rem;
 		}
@@ -537,7 +537,7 @@
       border: 1px solid $darkgrey;
       background-color: $limegreen-low;
 
-      @include respond-to(handhelds) {
+      @include respond-to(medium) {
         font-size: 1.4rem !important;
       }
 		}
@@ -550,7 +550,7 @@
 
 	text-align: center;
 
-	@include respond-to(handhelds) {
+	@include respond-to(medium) {
 		grid-row: 4;
 		grid-column: 1;
 		margin-bottom: 2vh;
@@ -616,7 +616,7 @@
     margin: 0;
   }
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     grid-column: 1;
     grid-row: 2;
   }
@@ -691,7 +691,7 @@
   grid-column: 1;
   grid-row: 1;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     text-align: center;
   }
 }
@@ -702,7 +702,7 @@
   padding-left: 2px;
   font-size: 1.8rem;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     border-left: 0;
     text-align: right;
     font-size: 1.3rem;
@@ -714,7 +714,7 @@
 
 .requirement-row-excerpt {
 	font-size: 1.5em;
-	@include respond-to(handhelds) {
+	@include respond-to(medium) {
 		text-align: center;
     font-size: 1.2em;
 	}
@@ -723,7 +723,7 @@
 .req-row-info {
 	font-size: 1.3em;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     text-align: center;
     font-size: 1.1em;
   }
@@ -749,7 +749,7 @@
   font-weight: 650 !important;
   text-transform: uppercase;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: 1.7em !important;
   }
 }
@@ -765,7 +765,7 @@
   .jbh-grid-container {
     grid-template-columns: 65% 35%;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       grid-template-columns: 100%;
 
       .jbh-grid-first {
@@ -814,7 +814,7 @@
     border-top: 1px solid $lightgrey;
     background-color: $limegreen-low;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 1.8rem;
     }
   }
@@ -833,7 +833,7 @@
       font-size: 1.9rem;
       color: $midgrey;
 
-      @include respond-to(handhelds) {
+      @include respond-to(medium) {
         font-size: 1.4rem;
       }
     }
@@ -851,7 +851,7 @@
     width: 100%;
     background-color: $limegreen-low;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 1.8rem;
     }
   }
@@ -860,14 +860,14 @@
 .opportunity-info-row {
   font-size: 1.2em;
   color: $midgrey;
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: .95em;
   }
 
   .opportunity-info-row-data {
     font-size: 1.7em;
     color: black;
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 1.5em;
     }
   }
@@ -884,7 +884,7 @@
   padding-left: 4vw;
   padding-right: 4vw;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     margin-left: 2vw;
     margin-right: 2vw;
     padding-bottom: 2vh;
@@ -906,7 +906,7 @@
   max-width: 70vw;
   margin-left: auto;
   margin-right: auto;
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     border: 2px solid $midgrey;
   }
 }
@@ -943,7 +943,7 @@
   width: auto;
   border-bottom: 1px solid $lightgrey;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     margin-top: 4vh;
   }
 }
@@ -971,7 +971,7 @@
     padding-right: 5vw;
     font-size: 2rem;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 1.2rem;
     }
   }
@@ -1003,7 +1003,7 @@
     padding-left: 1vw;
     padding-right: 1vw;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: .9rem;
     }
   }
@@ -1013,7 +1013,7 @@
     padding-top: 5vh;
     font-size: 2rem;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 1.6rem;
     }
   }
@@ -1056,7 +1056,7 @@
     font-weight: 300;
   }
 
-  @include respond-to(handhelds){
+  @include respond-to(medium){
     /*font-size: .9rem;*/
     display: none;
   };
@@ -1078,7 +1078,7 @@
     font-weight: 300;
   }
 
-  @include respond-to(handhelds){
+  @include respond-to(medium){
     font-size: .9rem;
     display: block;
   };
@@ -1089,7 +1089,7 @@
   margin: 0;
   font-size: 1.8rem;
   margin-left: 2vw;
-  @include respond-to(handhelds){
+  @include respond-to(medium){
     font-size: 1.4rem;
   };
 }
@@ -1134,7 +1134,7 @@
   margin-top: 5vh;
 
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: 1.5rem;
   }
 }
@@ -1165,7 +1165,7 @@
     margin-top: 5vh;
 
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 1.5rem;
     }
   }
@@ -1202,7 +1202,7 @@
     }
 
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 2rem;
     }
   }
@@ -1253,7 +1253,7 @@
 
 .opportunity_planned_by_date {
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     .d-flex {
       display: flex;
       flex-wrap: wrap !important;
@@ -1269,7 +1269,7 @@
   margin-left: 2px;
   margin-right: 2px;
   font-size: 1.2rem;
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     padding-top: 2vh;
 
     #rsvp_additional_vols {
@@ -1282,7 +1282,7 @@
     font-weight: 600;
     color: $limegreen;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 1.6rem;
     }
   }
@@ -1312,7 +1312,7 @@
 
 
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     .d-flex {
       display: flex;
       flex-wrap: wrap !important;
