--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -12,8 +12,59 @@
   width: 100%;
   position: relative;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
 
+  }
+
+  .form-inline {
+    display: inline-block;
+    width: 50vw;
+
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+      margin: auto;
+      font-size: 4.5rem;
+      color: rgba(0,0,0,.35);
+
+      @include respond-to(medium) {
+        font-size: 2rem;
+      }
+    }
+    ::-moz-placeholder { /* Firefox 19+ */
+      font-size: 4.5rem;
+      color: rgba(0,0,0,.35);
+      margin: auto;
+
+      @include respond-to(medium) {
+        font-size: 2rem;
+      }
+    }
+    :-ms-input-placeholder { /* IE 10+ */
+      color: rgba(0,0,0,.35);
+      font-size: 4.5rem;
+      margin: auto;
+
+      @include respond-to(medium) {
+        font-size: 2rem;
+      }
+    }
+    :-moz-placeholder { /* Firefox 18- */
+      color: rgba(0,0,0,.35);
+      font-size: 4.5rem;
+      margin: auto;
+
+      @include respond-to(medium) {
+        font-size: 2rem;
+      }
+    }
+    ::placeholder {
+      color: rgba(0,0,0,.35);
+      font-size: 4.5rem;
+      margin: auto;
+
+      @include respond-to(medium) {
+        font-size: 2rem;
+      }
+    }
   }
 }
 
@@ -51,77 +102,32 @@
   padding-left: 30vh;
   padding-right: 30vh;
 
-  @include respond-to(medium-screens) {
+  @include respond-to(medium) {
     padding-top: 2vh;
     padding-left: 2vw;
     padding-right: 2vw;
   }
 
-  .form-inline {
-    display: inline-block;
-    width: 50vw;
-
-    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-      margin: auto;
-      font-size: 4.5rem;
-      color: rgba(0,0,0,.35);
-
-      @include respond-to(handhelds) {
-        font-size: 2rem;
-      }
-    }
-    ::-moz-placeholder { /* Firefox 19+ */
-      font-size: 4.5rem;
-      color: rgba(0,0,0,.35);
-      margin: auto;
-
-      @include respond-to(handhelds) {
-        font-size: 2rem;
-      }
-    }
-    :-ms-input-placeholder { /* IE 10+ */
-      color: rgba(0,0,0,.35);
-      font-size: 4.5rem;
-      margin: auto;
-
-      @include respond-to(handhelds) {
-        font-size: 2rem;
-      }
-    }
-    :-moz-placeholder { /* Firefox 18- */
-      color: rgba(0,0,0,.35);
-      font-size: 4.5rem;
-      margin: auto;
-
-      @include respond-to(handhelds) {
-        font-size: 2rem;
-      }
-    }
-    ::placeholder {
-      color: rgba(0,0,0,.35);
-      font-size: 4.5rem;
-      margin: auto;
-
-      @include respond-to(handhelds) {
-        font-size: 2rem;
-      }
-    }
+  @include respond-to(medium) {
+    padding-top: 10vh;
+    padding-left: 10vw;
+    padding-right: 10vw;
   }
 
   .location-select-outline {
     background:rgba(255,255,255, 0.75);
     padding-bottom: 3vh;
-    border-radius: 10px;
-    border: 2px solid black;
+    border-radius: px;
+    border: 2px solid grey;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       margin-top: 10vh;
       border-radius: 5px;
     }
   }
 
   .form-inline {
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       width: 100%;
     }
   }
@@ -135,8 +141,8 @@
     width: auto;
 
 
-    @include respond-to(handhelds) {
-      font-size: 2rem;
+    @include respond-to(medium) {
+      font-size: 3.5rem;
     }
   }
 
@@ -146,7 +152,7 @@
     width: 100% !important;
     font-size: 7rem;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       width: 80vw !important;
       font-size: 3.5rem;
       margin: auto;
@@ -161,7 +167,7 @@
     color: white;
     font-family: 'Ubuntu';
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 2rem;
     }
   }
@@ -172,7 +178,7 @@
   min-height: 50vw;
   max-height: 600px !important;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     min-height: 70vw;
   }
 
@@ -196,7 +202,7 @@
     display: none;
   }
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     overflow-y: auto;
     height: 80vh;
 
@@ -234,7 +240,7 @@
     max-height: 400px;
     margin-bottom: 0 !important;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       height: 60vh !important;
     }
   }
@@ -244,7 +250,7 @@
     font-size: 2rem;
     text-transform: uppercase;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 1rem;
     }
   }
@@ -258,7 +264,7 @@
     text-align: center;
     padding-top: 5vh;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 2rem;
     }
   }
@@ -281,7 +287,7 @@
 
     overflow-y: auto;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       height: 20vh !important;
     }
 
@@ -298,12 +304,12 @@
       .calendar-opportunity-title {
         font-size: 1.8rem;
 
-        @include respond-to(handhelds) {
+        @include respond-to(medium) {
           font-size: 1.1rem;
         }
       }
 
-      @include respond-to(handhelds) {
+      @include respond-to(medium) {
         font-size: .8rem;
       }
 
@@ -343,7 +349,7 @@
     padding-left: 2vw;
     padding-right: 2vw;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 2rem;
     }
   }
@@ -354,7 +360,7 @@
     color: white;
     font-size: 2rem;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       display: inline-block;
       font-size: 1rem;
     }
@@ -380,7 +386,7 @@
   border-bottom: 0;
   background-color: rgba(255,255,255,.85);
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     grid-template-columns: 100%;
     height: auto;
   }
@@ -398,7 +404,7 @@
       color: $darkgreen;
     }
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 1.2rem;
     }
   }
@@ -408,7 +414,7 @@
     font-family: 'Ubuntu';
 
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 2.1rem;
     }
   }
@@ -420,7 +426,7 @@
     height: auto;
     margin-bottom: 5vh;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: .8rem;
       margin-bottom: 0;
     }
@@ -431,7 +437,7 @@
     text-align: center;
     border-right: 1px solid black;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       display: none;
     }
   }
@@ -441,7 +447,7 @@
     text-align: center;
     border-right: 1px solid black;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       display: none;
     }
   }
@@ -450,7 +456,7 @@
     grid-column: 3;
     text-align: center;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       display: none;
     }
   }
@@ -461,7 +467,7 @@
     padding-top: 2vh;
     padding-bottom: 2vh;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       display: block;
       grid-column: 1;
     }
@@ -485,7 +491,7 @@
 .landing-title {
   font-size: 3.5em;
   text-align: center;
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: 1.9em;
   }
   color: $darkgrey;
@@ -498,7 +504,7 @@
 //   font-weight: 700;
 //   text-align: center;
 //   color: $darkgrey;
-//   @include respond-to(handhelds) {
+//   @include respond-to(medium) {
 //     font-size: 2.4em;
 //     margin-left: 10vw;
 //     margin-right: 10vw;
@@ -510,7 +516,7 @@
 
 .landing-logo {
   max-width: 60vw;
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     max-width: 80vw;
   }
   display: block;
@@ -522,7 +528,7 @@
   border-top: 2px solid $lightgrey;
   margin-top: 3vh;
   text-align: center;
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     margin-left: 10vw;
     margin-right: 10vw;
   }
@@ -534,13 +540,13 @@
 .landing-explanation-basic {
   font-size: 1.2em;
   margin-top: 2vh;
-  // @include respond-to(handhelds) {
+  // @include respond-to(medium) {
   //   font-size: 0.6em;
   // }
 }
 
 .landing-explanation-detail {
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: 0.7em;
   }
 
@@ -563,7 +569,7 @@
   margin-bottom: 5vh;
   border-bottom: 2px solid $lightgrey;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     margin-left: 20vh;
     margin-right: 20vh;
   }
@@ -574,7 +580,7 @@
   padding-left: 2vw;
   margin-top: 6vh;
   margin-bottom: 2vh;
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     padding: 2vh 6vw;
   }
 }
@@ -630,7 +636,7 @@
     display: none;
 
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       margin-left: 6vw;
       margin-top: 3vh;
       width: 88vw;
@@ -641,7 +647,7 @@
 
       font-size:1.7rem;
 
-      @include respond-to(handhelds) {
+      @include respond-to(medium) {
         font-size: .8rem;
       }
     }
@@ -659,7 +665,7 @@
     background: $darkgreen;
     opacity: .9;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       margin-left: 10vw;
       width: 80vw;
       height: 10vh;
@@ -679,7 +685,7 @@
     background: $darkgreen;
     opacity: .8;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       margin-left: 10vw;
       margin-top: 81vh;
       width: 80vw;
@@ -702,7 +708,7 @@
 
     font-size: 4.5rem;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       margin-left: 2vw;
       margin-right: 2vw;
       font-size: 2.4rem;
@@ -720,7 +726,7 @@
     z-index: 1000;
     font-size: 2rem;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       margin-left: 2vw;
       margin-top: 2vh;
       width: 96vw;
@@ -737,7 +743,7 @@
     .small-text {
         font-size: 1.3rem;
 
-        @include respond-to(handhelds) {
+        @include respond-to(medium) {
           font-size: .8rem;
         }
       }
@@ -756,7 +762,7 @@
     margin: 0;
   }
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     grid-column: 1;
     grid-row: 2;
     border-top: 1px solid $darkgreen;
@@ -782,7 +788,7 @@
   border-radius: 2px;
   box-shadow: rgba(0, 0, 0, 0.6) 0px 2px 4px 0;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     padding: 5px;
     margin: 5px;
   }
@@ -790,7 +796,7 @@
   & h3 {
     color: #666;
     margin: 0;
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       font-size: 1.1em;
     }
   }
@@ -801,7 +807,7 @@
   margin-top: 3vh;
   cursor: pointer;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     left: 0;
     margin-top: 1vh;
   }
@@ -813,7 +819,7 @@
   & h3 {
     margin-bottom: 1vh;
   }
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     width: 95%;
   }
 }
@@ -832,13 +838,13 @@
   right: 0;
   margin-top: 3vh;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     margin-top: 1vh;
   }
 }
 
 .zip-floater {
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     display: none;
   }
 }
@@ -953,7 +959,7 @@
   padding-right: 1vw;
   padding-left: 3vw;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: 3.3em;
   }
 }
@@ -973,7 +979,7 @@
   text-transform: none !important;
   font-size: 1.9rem !important;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: 1.6rem !important;
   }
 }
@@ -1027,7 +1033,7 @@
   font-size: 1.3rem;
   text-align: center;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     margin-left: 5vw;
     margin-right: 5vw;
     font-size: 1rem;
