--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -41,7 +41,7 @@
     max-width: 20%;
     height: auto;
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       max-width: 40%;
     }
   }
@@ -62,7 +62,7 @@
   text-align: center;
   font-size: 1.6rem !important;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: 1.4rem !important;
   }
 }
@@ -81,7 +81,7 @@
     color: $darkgrey;
   }
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: 1.6rem !important;
   }
 }
@@ -95,7 +95,7 @@
 .original-post-content {
   font-size: 1.6rem;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: 1.2rem;
   }
 
@@ -133,7 +133,7 @@
   height: 1vh;
   font-size: 1.3rem !important;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: .9rem;
   }
 }
