--- a/app/assets/stylesheets/requirements.scss
+++ b/app/assets/stylesheets/requirements.scss
@@ -20,7 +20,7 @@
 			color: $limegreen;
 		}
 
-		@include respond-to(handhelds) {
+		@include respond-to(medium) {
 			.requirement-marker {
 				display: none;
 			}
@@ -53,7 +53,7 @@
   color: $limegreen;
   background: $darkgrey;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: 2.2em;
   }
 }
@@ -69,7 +69,7 @@
 
   color: white;
   background: $midgrey;
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: 1.7em;
   }
 
@@ -94,7 +94,7 @@
   margin-left: 5vw;
   margin-right: 5vw;
 
-  @include respond-to(handhelds){
+  @include respond-to(medium){
     margin-right: 5vw;
     font-size: .9rem;
   }
@@ -106,7 +106,7 @@
   color: black;
   margin-left: 2vw;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     font-size: 1.2rem;
   }
 }
@@ -124,7 +124,7 @@
   border-top: 1px solid $lightgrey;
   border-bottom: 1px solid $lightgrey;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
     margin-left: 4vw;
     margin-right: 4vw;
   }
@@ -197,7 +197,7 @@
   border-bottom: 1px solid $lightgrey;
   font-size: 1.7em;
 
-  @include respond-to(handhelds) {
+  @include respond-to(medium) {
   	font-size: 1em;
   }
 }
