--- a/app/assets/stylesheets/waivers.scss
+++ b/app/assets/stylesheets/waivers.scss
@@ -24,7 +24,7 @@
       height: 15vh;
     }
 
-    @include respond-to(handhelds) {
+    @include respond-to(medium) {
       padding: 2vh 2vw 2vh 2vw;
       margin: 5vh 5vw 5vh 5vw;
     }
