alright most of the styling stuff is fixed

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -85,7 +85,7 @@
 
 .calendar-background {
   display: grid;
-  grid-template-rows: 85% 15%;
+  grid-template-rows: 75vh 15vh;
 }
 
 .calendar-row-1 {
